Column View: Keep wheel-behavior consistent with other views

Using the wheel in the column view resulted in too big jumps. Keep it
consistent with the details view and icons view.

BUG: 269942
FIXED-IN: 4.7.0